# percentages

./: Cargo.toml  README.md
scripts/: homeLogic.js  logic.js
src/: lib.rs  main.rs
static/: home.html  homeLogic.js  index.html  style.css
static/catchers/: 404.html  500.html
styles/: style.css
templates/: error.html.hbs  results.html.hbs  success.html.hbs
