[package]
name = "percentages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eval = "0.4.3"
itertools = "0.10.5"
regex = "1"
rocket = { version = "0.5.0-rc.2" }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = "1.0.160"
